Prevents overflow for small width

--- a/src/app/components/message/message.component.scss
+++ b/src/app/components/message/message.component.scss
@@ -50,6 +50,7 @@ p {
   padding: 1em;
   border-radius: 1em;
   border-top-left-radius: 0;
+  word-break: break-all;
 }
 
 .message-content--aligned-right {
